_sass/index.scss
.index-sections {
  @include flex-vertical;
}

.index-section {
  flex: 1;
  @include flex-vertical;
  margin-bottom: $spacer-m;
  @include small {
    margin-bottom: $spacer-l;
  }
}

#index-header {
  .header-title {
    visibility: hidden;
  }
}

.index-link {
  color: black;
  font-weight: 500;
  font-size: 120%;
  text-align: end;
  i {
    margin-left: $spacer-xs;
  }
}

.index-section-image {
  @include flex-vertical;
  justify-content: flex-end;
  img {
    width: 100%;
    height: auto;
  }
}

.index-section-interaction {
  background: white;
  @include default-padding;
  @include flex-vertical;
  justify-content: space-between;
  @include medium {
    font-size: 120%;
  }
}

.index-aspect-ratio {
  @include aspect-ratio;
}

.small-index-section {
  @include small {
    @include flex-horizontal;
    .index-section:first-child {
      margin-right: $spacer-l;
    }
  }
}

.why-open-source {
  @include small {
    flex-direction: row-reverse;
    > * {
      flex: 1;
    }
    .index-aspect-ratio {
      padding-bottom: 0%;
      padding-right: $spacer-l;
    }
  }
}

